# cost-model

./: .gdb_history  .gitignore  0M_batch_falcon.csv  10M_batch_falcon.csv  20M_batch_falcon.csv  50M_batch_falcon.csv  50M_wait_falcon.csv  CMakeLists.txt  FIFO-books-50M-M20.csv  FIFO-books-50M-M80.csv  LFU-books-50M-M80.csv  LRU-books-20M-M20.csv  LRU-books-50M-M80.csv  Makefile  README.md  aulid_multithread.csv  auto.sh  benchmark_results.csv  books-100M-join.4.csv  books-100M-point.4.csv  books-100M-range.4.csv  books-200M-join.csv  books-200M-point.csv  books-200M-range.csv  books_10M_uint64_unique_falcon_test.csv  books_200MB_1Mquery_join.range.csv  books_200M_uint64_unique_pgm_mem_range_multithread.csv  bptree_multithread.csv  cache_bench_results.csv  falcon_multithread.csv  falcon_point.csv  fb_200M_uint64_unique_pgm_mem_range_multithread.csv  hash_join_result.csv  index.boot  optimalEpsilon.py  osm_cellids_200M_uint64_unique_pgm_mem_range_multithread.csv  perf.data  pgm_query_io_cdf.csv  range-uu-FIFO-fb-20M-M20-lo.csv  range-uu-LFU-fb-20M-M20-lo.csv  (+7 more)
doc/: appendix.tex  tutorial.md
doc/figures/: heatmap_latency_ms_0MB.pdf.bak  heatmap_throughput_qps_0MB.pdf.bak
experiments/: build.cpp  cache_policy_bench.cpp  falcon_point.cpp  falcon_range_single.cpp  hash_join.cpp  join_parallel.cpp  join_query.cpp  main.cpp  page_fetch_strategy.cpp  parallel.cpp  parallel2.cpp  parallel3.cpp  parallel4.cpp  parallel5.cpp  parallel6.cpp  range_parallel.cpp  range_parallel2.cpp  rmi_falcon_range_test.cpp  rmi_falcon_test.cpp  rq.cpp  simple.cpp  single.cpp  single_rq.cpp  sort_merge_join.cpp  test_in_sosd.cpp
experiments/benchmark/: analyze.ipynb  aulid_range_test.cpp  aulid_test.cpp  bplustree.c  bplustree.h  bplustree_range_test.cpp  bplustree_test.c  bplustree_test.cpp  config.hpp  my_first_rmi.cpp  my_first_rmi.h  my_first_rmi_data.h  pgm_disk_range_test.cpp  pgm_disk_test.cpp  pgm_mem_range_test.cpp  pgm_mem_test.cpp  rmi_disk_range_test_books.cpp  rmi_disk_range_test_fb.cpp  rmi_disk_range_test_osm.cpp  rmi_disk_range_test_wiki.cpp  rmi_disk_test.cpp  rmi_disk_test_books.cpp  rmi_disk_test_fb.cpp  rmi_disk_test_osm.cpp  rmi_disk_test_wiki.cpp  storage_management.h
experiments/benchmark/bplustree/: .gdb_history  bplustree_test.cpp  stx_disk_kv.cpp  stx_disk_kv.h  test
experiments/benchmark/result/: aulid_multithread.csv  books_200M_uint64_unique_aulid_multithread.csv  books_200M_uint64_unique_aulid_range.csv  books_200M_uint64_unique_bptree_multithread.csv  books_200M_uint64_unique_bptree_range.csv  books_200M_uint64_unique_pgm_disk_multithread.csv  books_200M_uint64_unique_pgm_disk_range.csv  books_200M_uint64_unique_rmi_disk_multithread.csv  books_200M_uint64_unique_rmi_disk_range.csv  books_aulid_multithread.csv  books_bptree_multithread.csv  books_pgm_disk_multithread.csv  books_rmi_disk_multithread.csv  bptree_multithread copy.csv  fb_200M_uint64_unique_aulid_multithread.csv  fb_200M_uint64_unique_aulid_range.csv  fb_200M_uint64_unique_bptree_multithread.csv  fb_200M_uint64_unique_bptree_range.csv  fb_200M_uint64_unique_pgm_disk_multithread.csv  fb_200M_uint64_unique_pgm_disk_range.csv  fb_200M_uint64_unique_rmi_disk_multithread.csv  fb_200M_uint64_unique_rmi_disk_range.csv  fb_aulid_multithread.csv  fb_bptree_multithread.csv  fb_pgm_disk_multithread.csv  fb_rmi_disk_multithread.csv  osm_aulid_multithread.csv  osm_bptree_multithread.csv  osm_cellids_200M_uint64_unique_aulid_multithread.csv  osm_cellids_200M_uint64_unique_aulid_range.csv  osm_cellids_200M_uint64_unique_bptree_multithread.csv  osm_cellids_200M_uint64_unique_bptree_range.csv  osm_cellids_200M_uint64_unique_pgm_disk_multithread.csv  osm_cellids_200M_uint64_unique_pgm_disk_range.csv  osm_cellids_200M_uint64_unique_rmi_disk_multithread.csv  osm_cellids_200M_uint64_unique_rmi_disk_range.csv  osm_pgm_disk_multithread.csv  osm_rmi_disk_multithread.csv  pgm_disk_multithread.csv  rmi_disk_multithread.csv  (+11 more)
experiments/benchmark/rmi/: books_rmi.cpp  books_rmi.h  books_rmi_data.h  fb_rmi.cpp  fb_rmi.h  fb_rmi_data.h  osm_rmi.cpp  osm_rmi.h  osm_rmi_data.h  rmi_disk_test.cpp  wiki_rmi.cpp  wiki_rmi.h  wiki_rmi_data.h
experiments/benchmark/rmi_data/: my_first_rmi_L1_PARAMETERS
experiments/io_bench/: .gdb_history  IO_bench.ipynb  io_bench  io_bench.c  io_bench.sh
experiments/io_bench/results/: io_uring_1.txt  io_uring_1024.txt  io_uring_127.txt  io_uring_128.txt  io_uring_16.txt  io_uring_16384.txt  io_uring_2.txt  io_uring_2048.txt  io_uring_256.txt  io_uring_32.txt  io_uring_4.txt  io_uring_4096.txt  io_uring_512.txt  io_uring_64.txt  (+34 more)
experiments/run/: batch_bench.cpp  bench.cpp  epsilon_bench.cpp  join_bench.cpp  range_bench.cpp  range_eps_bench.cpp  range_single_bench.cpp  thread_bench.cpp  worker_bench.cpp
include/FALCON/: Falcon.hpp
include/IO/: IOuringInterface.hpp  LibaioInterface.hpp  PollIOuringInterface.hpp  SyncInterface.hpp  io_interface.hpp
include/aulid/: aulid_test.cpp  storage_management.h
include/bplustree/: btree.h  stx_disk_kv.cpp  stx_disk_kv.h
include/cache/: CacheFactory.cpp  CacheInterface.hpp  CachePool.hpp  FIFOCache.hpp  LFUCache.hpp  LRUCache.hpp  NullCache.hpp  ShardedFIFOCache.hpp  ShardedLFUCache.hpp  ShardedLRUCache.hpp
include/distribution/: zipf.hpp
include/pgm/: pgm_index.hpp  pgm_index_cost.hpp  pgm_index_disk.hpp  piecewise_linear_model.hpp
include/queue/: mpmc.hpp
include/rmi/: books.json  books_rmi.cpp  books_rmi.h  books_rmi_data.h  fb.json  fb_rmi.cpp  fb_rmi.h  fb_rmi_data.h  osm.json  osm_rmi.cpp  osm_rmi.h  osm_rmi_data.h  wiki.json  wiki_rmi.cpp  wiki_rmi.h  wiki_rmi_data.h
include/temp/: 0M_batch_falcon.csv  20M_batch_falcon.csv  CacheInterface.hpp  FIFOCache.hpp  LFUCache.hpp  LRUCache.hpp  books_10M_M10_falcon.csv  range_fb_10M_M20.csv  range_fb_10M_M60.csv
include/utils/: LatencyRecorder.hpp  include.hpp  utils.hpp
utils/: breakdown.py  fit.py  fit1.py  fit2.py  fit3.py  fitCAM.py  generate_query.py  getExpectedJoinCost.py  get_keys_gap_distribution.py  include.py  joinFit.ipynb  joinFit.py  optimalEpsilon.py  pdam_fio_test.sh  slide.cpp
(+124 files in other folders)
